syntax="proto3";

/**
 * probe messages
 */
message Probe {
    string probe_id = 1;
    int32 probe_priority = 2;
    int64 version_number = 3;

    enum Protocol {
        HTTP = 0;
        HTTPS = 1;
    }

    Protocol protocol = 4;
    string host = 5;
    int32 port = 6;
    string url_suffix = 7; 

    int64 start_time_seconds = 8;
    int32 probe_interval_seconds = 9;
    int32 probe_interval_post_failure_seconds = 10;
    int32 attempts_to_declare_failure = 11;
}

message ProbeResult {
    string probe_id = 1;
    int64 version_number = 2;
    
    bytes prober_ip_bytes = 3;
    string prober_ip_string = 4;
    string prober_hostname = 5;

    int64 timestamp_ns = 6;
    int64 application_layer_latency_ns = 7;
    int32 http_error_code = 8;
    string http_error_msg = 9;
    int32 application_bytes_sent = 10;
    int32 application_bytes_received = 11;

    /*
    int64 probe attempt number
    string request/reply content
    string dns_actual
    repeated ip_address
    repeated_ip_address_bytes
    int32 last_ip_address_attempted
    */
}

/**
 * scheduler service definition
 */
service Scheduler {
    rpc CancelProbe(CancelProbeRequest) returns (CancelProbeReply) {}
    rpc DescribeProbe(DescribeProbeRequest) returns (DescribeProbeReply) {}
    rpc ListProbeIds(ListProbeIdsRequest) returns (ListProbeIdsReply) {}
    rpc ScheduleProbe(ScheduleProbeRequest)  returns (ScheduleProbeReply) {}
}

message CancelProbeRequest {
    string probe_id = 1;
}

message CancelProbeReply {
}

message DescribeProbeRequest {
    string probe_id = 1;
}

message DescribeProbeReply {
    Probe probe = 1;
}

message ListProbeIdsRequest {
    int32 probe_priority = 1;
}

message ListProbeIdsReply {
    repeated string probe_id = 1;
}

message ScheduleProbeRequest {
    Probe probe = 2;
}

message ScheduleProbeReply {
}

/*
 * probe cache service definition
 */
service ProbeCache {
    rpc GatherProbes(GatherProbesRequest) returns (GatherProbesReply) {}
}

message GatherProbesRequest {
    int32 probe_priority = 1;
    repeated string scheduled_probe_id = 2;
}

message GatherProbesReply {
    repeated Probe probe = 1;
    repeated string cancel_probe_id = 2;
}
